Assignment-2 1) styling text 2) combine the selector for reusable css , and parent child her, and the problem with it 3) working with  element name like id and class , to solve the above our issue., what we should use. 4) working with colour , what is colours , how they made , how will you identify which colour you should use --> colour, background colour, border colour

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,26 @@
-.body{
-    
+header {
+  text-align: center;
+  text-transform: uppercase;
+  background-color: rgb(156, 153, 149);
+  font-size: 15px;
+  color: aqua;
+}
+body {
+  border: 5px solid red;
+  font-family: serif;
+}
+button {
+  font-size: 35px;
+  background-color: black;
+}
+.cart {
+  /* background-color: black; */
+  color: aliceblue;
+}
+article,
+h3 {
+  text-transform: uppercase;
+}
+ul {
+  font-size: 20px;
 }
