--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,56 @@
 header {
   text-align: center;
   text-transform: uppercase;
-  background-color: rgb(156, 153, 149);
-  font-size: 15px;
+  background-color: rgb(173, 171, 169);
+  font-size: 25 px;
   color: aqua;
+  padding: 5px;
 }
-body {
-  border: 5px solid red;
+nav {
+  border: 5px solid black;
   font-family: serif;
+  width: 800px;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* aside button a {
+  color: black;
+} */
+/* .button {
+  color: brown;
+} */
+.cart {
+  /* background-color: black; */
+  color: red;
+  text-decoration: none;
 }
 button {
   font-size: 35px;
   background-color: black;
+  width: 100%;
+  padding: 10px;
+  text-decoration: none;
 }
-.cart {
-  /* background-color: black; */
-  color: aliceblue;
+button:hover {
+  background-color: gold;
+  text-decoration: underline double;
 }
+button:active {
+  background-color: greenyellow;
+  text-decoration: underline dotted black;
+}
+
 article,
 h3 {
   text-transform: uppercase;
 }
-ul {
+li {
   font-size: 20px;
+  list-style-type: "\1f44d";
+  padding-top: 10px;
+}
+.img {
+  width: 200px;
+  height: auto;
 }
