--- a/styles/style.css
+++ b/styles/style.css
@@ -2,59 +2,60 @@ header {
   text-align: center;
   text-transform: uppercase;
   background-color: rgb(173, 171, 169);
-  font-size: 25 px;
+  font-size: 20 px;
   color: aqua;
   padding: 5px;
+  margin-bottom: none;
 }
+
 nav {
   border: 5px solid black;
   font-family: serif;
   width: 800px;
-  margin-top: 20px;
+  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
 }
 
-.cart {
-  /* background-color: black; */
-  color: red;
-  text-decoration: none;
+/* article {
+  flex-wrap: wrap;
+} */
+.img {
+  width: 30%;
+  height: auto;
+  float: left;
+  margin: none;
 }
-.button {
-  font-size: 35px;
-  background-color: black;
-  width: 100%;
-  padding: 10px;
-  text-decoration: none;
-}
-.button:hover {
-  background-color: gold;
-  text-decoration: underline double;
-}
-.button:active {
-  background-color: greenyellow;
-  text-decoration: underline dotted black;
+section {
+  width: 230px;
+  display: inline;
+  float: left;
+  margin-left: 25px;
 }
 
-article,
-h3 {
-  text-transform: uppercase;
-}
-li {
-  font-size: 20px;
-  list-style-type: "\1f44d";
-  padding-top: 10px;
-}
-.img {
-  width: 200px;
-  height: auto;
-}
 div {
   background-color: blue;
   padding: 2px 10px;
-  margin: 10px;
+  margin: 5px;
   display: inline;
+}
+.price {
+  float: left;
+}
+.free {
+  float: right;
+  margin-top: 30px;
+  margin-left: 20px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+}
+.ready {
+  margin-left: 0px;
+  margin-top: 80px;
+  font-size: 15px;
+  letter-spacing: 1px;
 }
 .black {
   background-color: black;
@@ -74,11 +75,47 @@ div {
 .brown {
   background-color: brown;
 }
+aside {
+  width: 250px;
+  display: inline;
+  float: right;
 
-/* /body {
-  position: relative;
-} */
+  margin-right: 25px;
+}
 
+.details {
+  text-transform: uppercase;
+  margin-left: 15px;
+}
+li {
+  font-size: 15px;
+  list-style-type: "\1f44d";
+  padding-top: 10px;
+  margin-left: 0;
+  letter-spacing: 1px;
+}
+.cart {
+  color: white;
+  text-decoration: none;
+  font-size: 35px;
+  padding: 12px;
+}
+.button {
+  background-color: black;
+  width: 100%;
+  border-color: black;
+}
+.button:hover {
+  background-color: gold;
+  text-decoration: underline double;
+}
+.button:active {
+  background-color: greenyellow;
+  text-decoration: underline dotted black;
+}
+.cart:active {
+  color: black;
+}
 .sale {
   position: absolute;
   color: white;
@@ -88,4 +125,20 @@ div {
   padding: 5px 20px;
   bottom: 98%;
   right: 93%;
+}
+footer {
+  border: 5px solid black;
+  font-family: serif;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+a {
+  text-decoration: underline black;
+  color: brown;
+}
+a:hover {
+  text-decoration: underline dotted red;
+  color: green;
 }
